[package]
name = "oblong"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
hex = "0.4.3"
num = { version = "0.4.0", features = ["rand"] }
rand = "0.8"

[dev-dependencies]
sha2 = "0.10.8"
